<resources>
    <string name="app_name">Uni Events</string>
    <string name="action_settings">Settings</string>
    <string name="event_major">"Major: "</string>
    <string name="event_location">"Join us at "</string>
    <string name="notifications_title">Notifications</string>
    <string name="share_using">Share Event via</string>
    <string name="add_to_calender">Add to calender</string>
    <string name="share_event">Share event</string>
    <string name="share_text_title">Check out this event\n</string>
    <string name="share_text_date">"\non "</string>
    <string name="share_text_location">"\nand will be in "</string>
    <string name="widget_title">Upcoming events</string>
    <string name="welcome_title">Welcome!</string>
    <string name="choose_major">Please choose your major/interest:</string>
    <string name="computer_science">Computer Science</string>
    <string name="computer_graphics">Computer Graphics</string>
    <string name="engineering">Engineering</string>
    <string name="business">Business</string>
    <string name="done">Done</string>


    <string name="adUnitId">ca-app-pub-5418155543211234/5693337370</string>
    <string name="accounting">Accounting</string>
    <string name="desc_event_image">Event Image</string>
    <string name="no_notifications">You have no new notifications</string>
    <string name="desc_delete_notification_button">Delete notification button</string>
    <string name="show_notifications_option">show me notifications when they arrive</string>
    <string name="receive_notifications_switch">Receive notifications switch</string>
    <string name="desc_button_done">Button Done</string>
    <string name="desc_event_title">Event title</string>
    <string name="desc_event_date">Event date</string>
    <string name="desc_event_location">Event location</string>
    <string name="desc_targeted_students">Targeted students</string>
    <string name="desc_event_desc">Event description</string>
    <string name="desc_button_save">Button save to my calender</string>
    <string name="desc_button_share">Button share event</string>
    <string name="desc_notification_text">Notification text</string>
</resources>
