<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="50dp">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_appbar_height"
        android:background="?colorPrimary">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="4dp"
            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="16dp"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:foreground="@drawable/gradient_top"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/desc_event_image" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:contentInsetStart="16dp"
                app:layout_collapseMode="pin">

                <TextView
                    android:id="@+id/textViewTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:contentDescription="@string/desc_event_title"
                    android:focusable="true"
                    android:nextFocusDown="@+id/textViewDate"
                    android:lineSpacingMultiplier="0.9"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/detail_title_text_size"
                    android:textStyle="bold" />
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/detail_text_margin"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:contentDescription="@string/desc_event_date"
                android:focusable="true"
                android:nextFocusDown="@+id/textViewLocation" />

            <TextView
                android:id="@+id/textViewLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/detail_text_margin"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:contentDescription="@string/desc_event_location"
                android:focusable="true"
                android:nextFocusDown="@+id/textViewTarget" />

            <TextView
                android:id="@+id/textViewTarget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/detail_text_margin"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:contentDescription="@string/desc_targeted_students"
                android:focusable="true"
                android:nextFocusDown="@+id/textViewDescription" />

            <TextView
                android:id="@+id/textViewDescription"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/detail_text_margin"
                android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier"
                android:textSize="@dimen/detail_body_text_size"
                android:contentDescription="@string/desc_event_desc"
                android:focusable="true"
                android:nextFocusDown="@+id/buttonSave" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonSave"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="?colorPrimary"
                    android:text="@string/add_to_calender"
                    android:textColor="@android:color/white"
                    android:contentDescription="@string/desc_button_save"
                    android:focusable="true"
                    android:nextFocusRight="@+id/buttonShare" />

                <Button
                    android:id="@+id/buttonShare"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="?colorPrimary"
                    android:textColor="@android:color/white"
                    android:text="@string/share_event"
                    android:contentDescription="@string/desc_button_share"
                    android:focusable="true" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>